--- a/frontend/bugtracker/src/app/app.component.html
+++ b/frontend/bugtracker/src/app/app.component.html
@@ -32,7 +32,7 @@
         </li>
         <!--    TODO    -->
         <li class="nav-item">
-          <a class="nav-link" routerLink="/TODO" routerLinkActive="active">
+          <a class="nav-link" routerLink="/registration" routerLinkActive="active">
             <i class="bi bi-people"></i> Rejestracja
           </a>
         </li>
@@ -56,10 +56,13 @@
           <button class="btn btn-link text-white d-lg-none me-2" id="sidebarToggle">
             <i class="bi bi-list fs-4"></i>
           </button>
+          <!--
           <div class="header-title d-flex align-items-center">
             <h2 class="mb-0" style="background: linear-gradient(90deg, var(--primary) 0%, var(--accent) 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Bug Detective</h2>
             <app-animated-bug class="ms-2"></app-animated-bug>
           </div>
+          -->
+        <app-home></app-home>
         </div>
 
         <div class="d-flex align-items-center">
