--- a/frontend/bugtracker/src/app/components/bug-report-details/bug-report-details.component.html
+++ b/frontend/bugtracker/src/app/components/bug-report-details/bug-report-details.component.html
@@ -1,15 +1,15 @@
-<h2>Szczegóły zgłoszenia</h2>
+<h2>Bug Report Details</h2>
 
-<div *ngIf="bugReportLog; else loading">
-  <p><strong>ID:</strong> {{ bugReportLog.id }}</p>
-  <p><strong>Komentarz:</strong> {{ bugReportLog.comment || 'Brak komentarza' }}</p>
-  <p><strong>Data:</strong> {{ bugReportLog.date || 'Brak daty' }}</p>
-  <p><strong>Status błędu:</strong> {{ bugReportLog.bugStatus?.name || 'Brak statusu' }}</p>
-  <p><strong>Zgłoszenie błędu:</strong> {{ bugReportLog.bugReport?.title || 'Brak zgłoszenia' }}</p>
+<div *ngIf="bugReport; else loading">
+  <p><strong>ID:</strong> {{ bugReport.id }}</p>
+  <p><strong>Bug Report:</strong> {{ bugReport.title || 'No title' }}</p>
+  <p><strong>Description:</strong> {{ bugReport.description || 'No description' }}</p>
+  <!--  <p><strong>Data:</strong> {{ bugReport.date || 'Brak daty' }}</p>-->
+  <p><strong>Bug Status:</strong> {{ bugReport.actualStatus?.name || 'No status' }}</p>
 
-  <button class="btn btn-secondary" routerLink="/bug-reports">Powrót</button>
+  <button class="btn btn-secondary" routerLink="/bug-reports">Back</button>
 </div>
 
 <ng-template #loading>
-  <p>Ładowanie danych...</p>
+  <p>Loading data...</p>
 </ng-template>
