--- a/frontend/bugtracker/src/app/components/home/home.component.html
+++ b/frontend/bugtracker/src/app/components/home/home.component.html
@@ -9,14 +9,14 @@
   </span>
   <span class="user-bar-item user-bar-stats-resolved">
     <i class="bi bi-clipboard-check me-1"></i>
-    Rozwiązane: <b>0</b>/<b>3</b>
+    Resolved: <b>0</b>/<b>3</b>
   </span>
   <button class="btn btn-logout user-bar-item" (click)="logout()">
-    <i class="bi bi-box-arrow-right me-1"></i>Wyloguj
+    <i class="bi bi-box-arrow-right me-1"></i>Logout
   </button>
 </div>
 <div *ngIf="!isAuthenticated" class="d-flex align-items-center">
   <button class="btn btn-primary btn-login" (click)="login()">
-    <i class="bi bi-shield-lock me-2"></i>Zaloguj się
+    <i class="bi bi-shield-lock me-2"></i>Login
   </button>
 </div>
