--- a/frontend/bugtracker/src/app/components/registration/registration.component.html
+++ b/frontend/bugtracker/src/app/components/registration/registration.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-6">
       <div class="card">
         <div class="card-header">
-          <h3 class="text-center">Zarejestruj się</h3>
+          <h3 class="text-center">Register</h3>
         </div>
         <div class="card-body">
           <div *ngIf="errorMessage" class="alert alert-danger">
@@ -14,11 +14,11 @@
           </div>
           <form #regForm="ngForm" (ngSubmit)="onSubmit(regForm)">
           <div class="mb-3">
-              <label for="firstName" class="form-label">Imię</label>
+              <label for="firstName" class="form-label">First Name</label>
               <input type="text" class="form-control" id="firstName" name="firstName" [(ngModel)]="registrationForm.firstName" required>
             </div>
             <div class="mb-3">
-              <label for="lastName" class="form-label">Nazwisko</label>
+              <label for="lastName" class="form-label">Last Name</label>
               <input type="text" class="form-control" id="lastName" name="lastName" [(ngModel)]="registrationForm.lastName" required>
             </div>
             <div class="mb-3">
@@ -26,11 +26,11 @@
               <input type="email" class="form-control" id="email" name="email" [(ngModel)]="registrationForm.email" required>
             </div>
             <div class="mb-3">
-              <label for="password" class="form-label">Hasło</label>
+              <label for="password" class="form-label">Password</label>
               <input type="password" class="form-control" id="password" name="password" [(ngModel)]="registrationForm.password" required>
             </div>
             <button type="submit" class="btn btn-primary w-100" [disabled]="isLoading">
-              {{ isLoading ? 'Rejestracja...' : 'Zarejestruj się' }}
+              {{ isLoading ? 'Registering...' : 'Register' }}
             </button>
           </form>
         </div>
