--- a/frontend/bugtracker/src/app/components/user/user.component.html
+++ b/frontend/bugtracker/src/app/components/user/user.component.html
@@ -1,14 +1,14 @@
-<h3>Lista użytkowników</h3>
+<h3>List of Users</h3>
 
 <div class="table-responsive">
   <table class="table text-center table-striped table-hover">
     <thead class="table-dark">
     <tr>
       <th>ID</th>
-      <th>Nazwa użytkownika</th>
+      <th>Username</th>
       <th>Email</th>
       <th>Status</th>
-      <th>Role</th>
+      <th>Roles</th>
     </tr>
     </thead>
     <tbody>
@@ -22,7 +22,7 @@
               'bg-success': tempUser.enabled,
               'bg-danger': !tempUser.enabled
             }">
-            {{ tempUser.enabled ? 'Aktywny' : 'Nieaktywny' }}
+            {{ tempUser.enabled ? 'Active' : 'Inactive' }}
           </span>
       </td>
       <td class="align-middle text-start">
@@ -36,5 +36,5 @@
 </div>
 
 <div *ngIf="users.length === 0" class="alert alert-info">
-  Brak użytkowników do wyświetlenia.
+  No users to display.
 </div>
