add bug assignments

--- a/frontend/bugtracker/src/app/app.component.html
+++ b/frontend/bugtracker/src/app/app.component.html
@@ -37,7 +37,7 @@
         </li>
         <!--    FOR ADMINS    -->
         <li *ngIf="hasRole('admin')"  class="nav-item">
-          <a class="nav-link" routerLink="/TODO" routerLinkActive="active">
+          <a class="nav-link" routerLink="/app-bug-assignment" routerLinkActive="active">
             <i class="bi bi-flag"></i> Assign Report
           </a>
         </li>
