UI fixes and unification

--- a/frontend/bugtracker/src/app/app.component.html
+++ b/frontend/bugtracker/src/app/app.component.html
@@ -19,11 +19,11 @@
             <i class="bi bi-person-check"></i> Assigned Bugs
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/buglogs" routerLinkActive="active">
-            <i class="bi bi-clipboard-data"></i> Bug Report Log
-          </a>
-        </li>
+<!--        <li class="nav-item">-->
+<!--          <a class="nav-link" routerLink="/buglogs" routerLinkActive="active">-->
+<!--            <i class="bi bi-clipboard-data"></i> Bug Report Log-->
+<!--          </a>-->
+<!--        </li>-->
 
         <!--    FOR ADMINS    -->
         <li *ngIf="hasRole('admin')" class="nav-item">
